--- a/WebContent/template/layout.xhtml
+++ b/WebContent/template/layout.xhtml
@@ -9,13 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <style>
+    	html, body{
+    		height: 100%;
+    		width: 100%;
+		}
+		body{
+			overflow-x: hidden;
+			font-size: 12px;
+		}
+		.container-fluid{
+			width:100%;
+    		height:100%;
+		}
     	ul.menu {
 				list-style-type: none;
 				margin: 0;
+				margin-left: 3%;
 				padding: 0;
-				background-color: #f1f1f1;
 				display: block;
-				width:100%;
+				width:97%;
+				margin-bottom: 100%;
 				
 		}
 		li a {
@@ -29,29 +42,41 @@
 				background-color: #ff6347;
 				color: white;
 				text-decoration: none;
-			}	
+			}
+		.menubar {
+			height:100%;
+			position: fixed;
+			height:100%;
+    		background:gray;
+		}
+		
+		.contents{
+			position: fixed;
+			left: 15.9%;
+		}
+			
     </style>
 </h:head>
 <h:body>
-	<div class="container" style="width:100%; height:100%; margin:0; padding:0">
+	<div class="container-fluid" style=" margin:0; padding:0">
 		<div class="row" style="margin:0; padding:0">
-			<div class="col-md-12 col-lg-12" style="margin:0; padding:0">
+			<div class="col-md-12 col-lg-12" style="margin:0; padding:0;">
 				<ui:insert name="header">
 					<ui:include src="/template/header.xhtml" />
 				</ui:insert>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-2 col-lg-2" style="background-color: #f1f1f1; margin:0; padding:0; height:100%">
+			<div class="col-md-2 col-lg-2 menubar" style=" margin:0; padding:0;">
 			 
 				<ui:insert name="menu">
 					<ui:include src="/template/menu.xhtml" />
 				</ui:insert>
 				
 			</div>
-			<div class="col-md-10 col-lg-10">
+			<div class="col-md-10 col-lg-10 contents" style="padding:0; margin:0">
 				<ui:insert name="content">
-					<ui:include src="/template/content" />
+					<ui:include src="/template/content.xhtml" />
 				</ui:insert>
 			</div>
 		</div>
