Updated user table and user model to capture active user and updated userRepository to return only active user

--- a/WebContent/template/menu.xhtml
+++ b/WebContent/template/menu.xhtml
@@ -16,7 +16,7 @@
 					</p:commandLink>
 				</li>
 				<li>
-					<p:commandLink class="menulist" action="#{userBean.showUserManager()}">
+					<p:commandLink class="menulist" action="#{userBean.showUserManager()}" disabled="#{userBean.loggeduser.getRole().getRole() != 'admin'}">
 						<h:outputText value="User Manager" /> 
 					</p:commandLink>
 				</li>
