Created dropdown menu for KRI Manager

--- a/WebContent/template/menu.xhtml
+++ b/WebContent/template/menu.xhtml
@@ -21,9 +21,17 @@
 					</p:commandLink>
 				</li>
 				<li>
-					<p:commandLink class="menulist">
-						<h:outputText value="KRI Manager" /> 
-					</p:commandLink>
+					<div class="dropdown" style="padding:0;margin:0">
+						
+						<a class="dropbtn">KRI Manager</a>
+						<div class="dropdown-content">
+							<a href="#">Add KRI</a>
+							<a href="#">Update KRI</a>
+							<a href="#">Delete KRI</a>
+							<a href="#">Report KRI Value</a>
+						</div>
+					</div>
+					
 				</li>
 				<li>
 					<p:commandLink class="menulist">
