--- a/WebContent/template/layout.xhtml
+++ b/WebContent/template/layout.xhtml
@@ -12,6 +12,7 @@
     	html, body{
     		height: 100%;
     		width: 100%;
+    		font-family: Arial, Helvetica, sans-serif;
 		}
 		body{
 			overflow-x: hidden;
@@ -53,6 +54,48 @@
 		.contents{
 			position: fixed;
 			left: 15.9%;
+		}
+		
+		.dropbtn {
+    		display:block;
+    		padding: 2 15px;
+    		font-size: 13px;
+    		border: none;	
+    		cursor: pointer;
+    		width:100%;
+		}
+		
+		.dropdown {
+    		position: relative;
+    		display: inline-block;
+    		width:100%;
+		}
+		
+		.dropdown-content {
+    		display: none;
+    		position: absolute;
+    		background-color: #f9f9f9;
+    		width:100%;
+    		z-index: 1;
+		}
+		.dropdown-content a {
+    		color: black;
+    		padding: 12px 16px;
+    		text-decoration: none;
+    		display: block;
+		}
+		
+		.dropdown-content a:hover {
+			background-color: #ff6347;
+			color: white;
+			}
+
+		.dropdown:hover .dropdown-content {
+   		 display: block;
+		}
+
+		.dropdown:hover .dropbtn {
+    		background-color: silver;
 		}
 			
     </style>
