Created KRi_ID generated and partly implemented UI for adding KRI

--- a/WebContent/template/menu.xhtml
+++ b/WebContent/template/menu.xhtml
@@ -25,10 +25,10 @@
 						
 						<a class="dropbtn">KRI Manager</a>
 						<div class="dropdown-content">
-							<a href="#">Add KRI</a>
-							<a href="#">Update KRI</a>
-							<a href="#">Delete KRI</a>
-							<a href="#">Report KRI Value</a>
+							<a href="kriManager.xhtml">Add KRI</a>
+							<a href="kriManager.xhtml">Update KRI</a>
+							<a href="kriManager.xhtml">Delete KRI</a>
+							<a href="kriManager.xhtml">Report KRI Value</a>
 						</div>
 					</div>
 					
