--- a/WebContent/template/layout.xhtml
+++ b/WebContent/template/layout.xhtml
@@ -110,14 +110,14 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-2 col-lg-2 menubar" style=" margin:0; padding:0;">
+			<div class="col-sm-2 col-md-2 col-lg-2 menubar" style=" margin:0; padding:0;">
 			 
 				<ui:insert name="menu">
 					<ui:include src="/template/menu.xhtml" />
 				</ui:insert>
 				
 			</div>
-			<div class="col-md-10 col-lg-10 contents" style="padding:0; margin:0">
+			<div class="col-sm-10 col-md-10 col-lg-10 contents" style="padding:0; margin:0;  overflow-y:auto;">
 				<ui:insert name="content">
 					<ui:include src="/template/content.xhtml" />
 				</ui:insert>
