--- a/WebContent/resources/css/layout.css
+++ b/WebContent/resources/css/layout.css
@@ -1,46 +1,137 @@
-html, body {
-    		height: 100%;
-    		width: 100%;
-		}
-		body{
-			overflow-x: hidden;
-			font-size: 12px;
-		}
-		.contain-fluid{
-			width:100%;
-    		height:100%;
-		}
-		.sidebar {
-    		position: fixed;
-			height:100%;
-    		background:gray;
-		}
-		
-		.contents{
-			position: fixed;
-			left: 16.7%;
-		}
-		ul.menu {
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
-				display: block;
-				width:100%;
-				margin-bottom: 100%;
-				
-		}
-		li a {
-				display: block;
-				color: #000;
-				padding: 10px 16px;
-				text-decoration: none;
-				width:100%
-			}
-		li a:hover {
-				background-color: #ff6347;
-				color: white;
-				text-decoration: none;
-			}
-			div{
-				margin:0; padding:0;
-			}
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,300);
+
+.main-nav{width:100%; padding: 0;}
+.main-nav li {list-style: none;}
+.main-nav a {
+	
+	text-decoration: none;
+	letter-spacing: .2em;
+	display: block;
+	padding: 10px 0 10px 20px;
+	/*border-bottom: 1px dotted gray;*/
+}
+.main-nav-ul{width: 100%; margin-left: 0; padding: 0}
+.main-nav-ul ul {display: none;}
+
+.main-nav > ul > li:first-child{
+	background: #66665e;
+	background: -moz-linear-gradient(#66665e 0%, #45463d 100%);
+	background: -webkit-linear-gradient(#66665e 0%, #45463d 100%);
+	background: linear-gradient(#66665e 0%, #45463d 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #66665e), color-stop(100%, #45463d));
+	border: 1px solid #45463d;
+	-webkit-border-radius: 3px 3px 0 0;
+	-moz-border-radius: 3px 3px 0 0;
+	border-radius: 3px 3px 0 0;
+}
+
+.main-nav > ul > li:first-child > a {
+	padding: 15px 0 10px 15px;
+	background: url(resources/images/pattern.png) top left repeat;
+	border: none;
+	border-top: 1px solid #818176;
+	-webkit-border-radius: 3px 3px 0 0;
+	-moz-border-radius: 3px 3px 0 0;
+	border-radius: 3px 3px 0 0;
+	text-align: center;
+	font-size: 1.2em;
+	font-weight: 300;
+	text-shadow: 0 -1px 1px #000000;
+}
+
+.main-nav > ul > li:first-child:hover {
+	background: #66665e;
+	background: -moz-linear-gradient(#66665e 0%, #45463d 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #66665e), color-stop(100%, #45463d));
+	background: -webkit-linear-gradient(#66665e 0%, #45463d 100%);
+	background: linear-gradient(#66665e 0%, #45463d 100%);
+}
+
+.main-nav > ul > li {
+	background: #e94f31;
+	background: -moz-linear-gradient(#e94f31 0%, #d13516 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e94f31), color-stop(100%, #d13516));
+	background: -webkit-linear-gradient(#e94f31 0%, #d13516 100%);
+	background: linear-gradient(#e94f31 0%, #d13516 100%);
+}
+
+.main-nav > ul > li:hover {
+	background: #e84323;
+	background: -moz-linear-gradient(#e84323 0%, #c33115 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e84323), color-stop(100%, #c33115));
+	background: -webkit-linear-gradient(#e84323 0%, #c33115 100%);
+	background: linear-gradient(#e84323 0%, #c33115 100%);
+}
+
+.main-nav > ul > li > a{
+	font-size: .9em;
+	display: block;
+	background: url(resources/images/pattern.png) top left repeat;
+	color: #ffffff;
+	border: 1px solid #ba2f14;
+	border-top: none;
+	text-shadow: 0 -1px 1px #751d0c;
+}
+
+.main-nav > ul > li > a > span.hasSub {
+	display: block;
+	padding: 5px 0px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
+.main-nav ul ul {
+	background: #f7f7f7;
+}
+
+.main-nav ul ul li {
+	padding: 0;
+	border-bottom: 1px solid #d4d4d4;
+	border-top: none;
+	background: #f7f7f7;
+	background: -moz-linear-gradient(#f7f7f7 0%, #ececec 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f7f7f7), color-stop(100%, #ececec));
+	background: -webkit-linear-gradient(#f7f7f7 0%, #ececec 100%);
+	background: linear-gradient(#f7f7f7 0%, #ececec 100%);
+}
+
+.main-nav ul ul li:last-child {
+	border-bottom: none;
+}
+
+.main-nav ul ul a {
+	padding: 10px 10px 10px 25px;
+	display: block;
+	color: #676767;
+	font-size: 10px;
+	font-weight: normal;
+}
+
+.main-nav ul ul {
+	padding: 0;
+}
+
+.main-nav ul ul ul {
+	padding-left: 30px;
+}
+.main-nav-ul ul a:before{
+	content: '\203A';
+	margin-right: 20px;
+}
+
+.main-nav-ul li.tap ul {display: block;}
+
+.main-nav .sub-arrow:after {
+	content: '\203A';
+	float: right;
+	margin-right: 20px;
+	transform: rotate(90deg);
+	-webkit-transform: rotate(90deg);
+	-moz-transform: rotate(90deg);
+}
+
+.main-nav li.tap .sub-arrow:after {
+	content: '\2039';
+}
