--- a/WebContent/resources/css/stylemenu.css
+++ b/WebContent/resources/css/stylemenu.css
@@ -1,20 +1,9 @@
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	width: 10%;
-	background-color: #f1f1f1;
-}
-
-li a {
-	display: block;
-	color: #000;
-	padding: 8px 16px;
-	text-decoration: none;
-	text-align: center;
-}
-
-li a:hover {
-	background-color: #555;
-	color: white;
+.createUser {
+	width: 80%;
+	/*background-color: red;*/ 
+	margin: auto; 
+	border: 1px solid gray;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	-moz-border-radius: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px;
 }
