--- a/WebContent/template/layout.xhtml
+++ b/WebContent/template/layout.xhtml
@@ -8,6 +8,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+   <script type="text/javascript">
+   	$(document).ready(function(e){
+   		$('.has-sub').click(function(){
+   			$(this).toggleClass('tap');
+   		});
+   	});
+   	
+   </script>
     <style>
     	html, body{
     		height: 100%;
@@ -48,7 +56,7 @@
 			height:100%;
 			position: fixed;
 			height:100%;
-    		background:#f8f8ff;
+    		background: #f7f7f7;/* #f8f8ff */
 		}
 		
 		.contents{
@@ -124,7 +132,5 @@
 			</div>
 		</div>
 	</div>
-	<!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
-  <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 </h:body>
 </html>
