modified page headers to resolve exceptions, corrected implicit navigations issues

--- a/WebContent/template/content.xhtml
+++ b/WebContent/template/content.xhtml
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" 
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html" 
 	xmlns:p="http://primefaces.org/ui">
 <h:body>
-	<ui:composition>
+	<ui:composition xmlns:h="http://java.sun.com/jsf/html">
 		<!-- Define page contents -->
 	</ui:composition>
 </h:body>
