--- a/WebContent/template/header.xhtml
+++ b/WebContent/template/header.xhtml
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" 
-	xmlns:ui="http://java.sun.com/jsf/facelets"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html" 
+	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
-<head>
 
-</head>
 <h:body>
-	<ui:composition>
+	<ui:composition xmlns:h="http://java.sun.com/jsf/html">
 		
 		
 			<div class="container navbar-inverse" style="padding: 0;margin:0; width:100%">
