--- a/WebContent/template/menu.xhtml
+++ b/WebContent/template/menu.xhtml
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" 
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html" 
 	xmlns:p="http://primefaces.org/ui">
-<head>
-
-</head>
 <h:body>
-	<ui:composition>
+	<ui:composition xmlns:h="http://java.sun.com/jsf/html">
 		<h:outputStylesheet library="css" name="layout.css"  />
 		<h:form>
 			<div class="main-nav">
