--- a/WebContent/resources/css/stylemenu.css
+++ b/WebContent/resources/css/stylemenu.css
@@ -1,9 +1,14 @@
 .createUser {
-	width: 80%;
+	width: 70%;
 	/*background-color: red;*/ 
 	margin: auto; 
-	border: 1px solid gray;
+	/*border: 1px solid gray;
 	-webkit-border-radius: 5px 5px 5px 5px;
 	-moz-border-radius: 5px 5px 5px 5px;
-	border-radius: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px;*/
+}
+
+#form1{
+	margin: auto; 
+	margin-left: 15%;
 }
