--- a/WebContent/resources/css/stylemenu.css
+++ b/WebContent/resources/css/stylemenu.css
@@ -1,4 +1,4 @@
-.createUser {
+.userManager {
 	width: 70%;
 	/*background-color: red;*/ 
 	margin: auto; 
@@ -11,4 +11,8 @@
 #form1{
 	margin: auto; 
 	margin-left: 15%;
+}
+
+#searchUserToUpdate{
+	width: 60%;
 }
