Implementing KRI module. Completed adding single KRI page and functionality. Started implementing Batch upload of KRI.

--- a/WebContent/resources/css/layout.css
+++ b/WebContent/resources/css/layout.css
@@ -48,7 +48,7 @@
 	background: linear-gradient(#66665e 0%, #45463d 100%);
 }
 
-.main-nav > ul > li {
+.main-nav > ul > li{
 	background: #e94f31;
 	background: -moz-linear-gradient(#e94f31 0%, #d13516 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e94f31), color-stop(100%, #d13516));
@@ -115,6 +115,14 @@
 
 .main-nav ul ul ul {
 	padding-left: 30px;
+}
+
+.innerUl {
+	background: #e94f31;
+	background: -moz-linear-gradient(#e94f31 0%, #d13516 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e94f31), color-stop(100%, #d13516));
+	background: -webkit-linear-gradient(#e94f31 0%, #d13516 100%);
+	background: linear-gradient(#e94f31 0%, #d13516 100%);
 }
 .main-nav-ul ul a:before{
 	content: '\203A';
