--- a/WebContent/template/layout.xhtml
+++ b/WebContent/template/layout.xhtml
@@ -56,7 +56,7 @@
 			height:100%;
 			position: fixed;
 			height:100%;
-    		background: #f7f7f7;/* #f8f8ff */
+    		background: #66665e;/* #f7f7f7 #f8f8ff */
 		}
 		
 		.contents{
