--- a/WebContent/template/menu.xhtml
+++ b/WebContent/template/menu.xhtml
@@ -49,7 +49,11 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="#">Update KRI</a></li>
+							<li>
+								<p:commandLink action="#{navigationBean.gotoupdateKRIPage()}">
+									<span class="sub-sub"> </span> <h:outputText value="Update KRI"/>
+								</p:commandLink>
+							</li>
 							<li><a href="#">Delete KRI</a></li>
 							<li><a href="#">Submit KRI value</a></li>
 						</ul>
